add:swaggerの出席情報と出席分類の中身の追加 add:出席判定と授業除外判定の初期値追加 fix:サーバー起動時のログイン機能部分をコメントアウト add:生徒をIdで検索をかけ見つかった場合の出席記録の更新の実装
not yet:残りのAPI通信のテスト
