# src/main/java/xyz/miyayu/attendanceapiserver/Controller/Request/AttendanceRequest.java
@@ -1,0 +1,12 @@
+package xyz.miyayu.attendanceapiserver.Controller.Request;
+
+import lombok.Data;
+
+@Data
+public class AttendanceRequest {
+    private int studentId;
+    private int classId;
+    private int atClassificationId;
+    private String icId;
+
+}
